--- a/css/addictions.css
+++ b/css/addictions.css
@@ -1,20 +1,22 @@
 div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
+    margin: 20px;
+    border: 3px solid #ccc;
     float: left;
-    width: 180px;
+    width: 200px;
+    
+
 }
 
-div.gallery:hover {
-    border: 1px solid #777;
-}
+
 
 div.gallery img {
     width: 100%;
-    height: auto;
+    height: 150px;
 }
 
 div.desc {
     padding: 15px;
     text-align: center;
+    font-size: 20px;
+    font-weight:bold;
 }
