--- a/css/addictions.css
+++ b/css/addictions.css
@@ -1,22 +1,29 @@
 div.gallery {
-    margin: 20px;
-    border: 3px solid #ccc;
+    margin-left: 40px;
+    margin-bottom: 10px;
     float: left;
     width: 200px;
-    
-
 }
 
-
+.addictionsList:hover{
+    -moz-box-shadow: 0 0 10px #c4f52e;
+    -webkit-box-shadow: 0 0 10px #c4f52e;
+    box-shadow: 0 10px 20px #c4f52e;
+}
 
 div.gallery img {
     width: 100%;
     height: 150px;
 }
 
-div.desc {
-    padding: 15px;
-    text-align: center;
-    font-size: 20px;
-    font-weight:bold;
+.desc {
+    font-size: 25px;
+    font-family: verdana;
+    color: #f1f1f1;
+    text-shadow: 3px 2px #212121;
+}
+
+.icon{
+    height: 20px;
+    width: 20px;
 }
