--- a/html/jquery.ui.chatbox.css
+++ b/html/jquery.ui.chatbox.css
@@ -12,6 +12,11 @@
     cursor: pointer;
 }
 
+#headingChat{
+    font-family: 'Roboto Slab', serif;
+}
+
+
 .ui-chatbox-content {
     padding: 0px;
     margin: 0px;
